# lotw

./: .envrc  .gitignore  CMakeLists.txt  Cargo.toml  GOAL.md  README.md  build.rs  flake.nix  pyproject.toml  symbols.yaml
.direnv/: flake-profile-1-link  flake-profile-2-link
agent/: STRATEGY.md  composer.py  eval.py  lotw_gym.py  objectives.json  policy_proposer.py  route.md  run_gpu.sh  smoke.py  train_ppo.py  video_align.py
assets/: README.md  audio.json  font.json  palettes.json  text.json
assets/rooms/: manifest.json  room-00-0.csv  room-00-1.csv  room-00-2.csv  room-00-3.csv  room-01-0.csv  room-01-1.csv  room-01-2.csv  room-01-3.csv  room-02-0.csv  room-02-1.csv  room-02-2.csv  room-02-3.csv  room-03-0.csv  room-03-1.csv  room-03-2.csv  room-03-3.csv  room-04-0.csv  room-04-1.csv  room-04-2.csv  room-04-3.csv  room-05-0.csv  room-05-1.csv  room-05-2.csv  room-05-3.csv  room-06-0.csv  room-06-1.csv  room-06-2.csv  room-06-3.csv  room-07-0.csv  room-07-1.csv  room-07-2.csv  room-07-3.csv  room-08-0.csv  room-08-1.csv  room-08-2.csv  room-08-3.csv  room-09-0.csv  room-09-1.csv  room-09-2.csv  (+25 more)
config/: rom.sha256
crates/lotw-port/: Cargo.toml
crates/lotw-runtime/: Cargo.toml
crates/lotw-tools/: Cargo.toml
disasm/: Makefile  bank00.s  bank01.s  bank02.s  bank03.s  bank04.s  bank05.s  bank06.s  bank07.s  bank08.s  bank09.s  bank10.s  bank11.s  bank12.s  bank13.s  bank14.s  bank15.s  bankfix.s  chr.s  entries.txt  header.s  lotw.cfg  lotw.inc
docs/: CODE_MAP.md  PLAN.md  PORTING.md  PORT_AUDIT.md  audio_backend.md  reverse_engineering.md  routine_catalog.md
docs/analysis/: bank13_byte_runs.md  banks_0-12_data_verification.md  byterun_sweep_bankfix.md  data-regions-code-banks.md  jump_tables.md  nmi-dispatch.md  ram-symbols.md  rng-drops.md  routine-names.md  table-0x14000.md
docs/recon/: 01-banks-vectors.md  02-mmc3-bankswitch.md  03-chr.md  04-pointer-tables.md  05-text-password.md  06-audio-engine.md  07-graphics-data.md  08-external-research.md  SUMMARY.md
editor/: README.md  extension.js  package-lock.json  package.json
examples/: rawloc.rs
fixtures/reference/: door_return.replay  gameplay_climb.replay  gameplay_walk.replay  labyrinth_entry.replay  labyrinth_room.replay  outside_walk.replay  password_prompt.replay  pochi_lab.replay  pochi_move.replay  pochi_p0.replay  room_transition.replay  start_game.replay  title_idle.replay
lotw-env/: Cargo.toml  README.md  pyproject.toml
lotw-env/src/: lib.rs
lotw-music/: Cargo.toml  build.rs
lotw-music/src/: lib.rs  note.rs
music-jit/: Cargo.toml  bench.sh  build.rs
music-jit/src/: lib.rs
music-macros/: Cargo.toml
music-macros/src/: lib.rs
port/specs/: farcall_bank_09_r7.json  farcall_bank_0C0D_seed.json  frame_counters.json  inc16_95.json  metasprite_build.json  ppu_commit_banks.json  queue_ppu_job_and_wait.json  ram_state_init.json  read_controllers.json  rng_update.json  scene_assemble.json  sfx_overlay_voice.json  song_init.json  sound_restore_game_banks.json  sound_set_default_banks.json  sound_set_song_banks.json  sound_tick.json  sub_A574.json  sub_A5B5.json  sub_A5E6.json  sub_A622.json  sub_A657.json  sub_A683.json  sub_A6A2.json  sub_A6B1.json  sub_A6C5.json  sub_A6E0.json  sub_A703.json  sub_A75D.json  sub_A7B1.json  sub_A7D2.json  sub_A7E1.json  sub_A7F0.json  sub_AAAE.json  sub_AAEE.json  sub_ACC5.json  sub_ACE0.json  sub_AD3B.json  sub_AD7A.json  sub_ADC7.json  (+234 more)
qt-editor/: Cargo.toml  build.rs  watch.sh
qt-editor/qml/: main.qml
qt-editor/src/: icon_shim.cpp  main.rs  room_canvas.rs
reference/asm/: README.md  bank-00.asm  bank-01.asm  bank-02.asm  bank-03.asm  bank-04.asm  bank-05.asm  bank-06.asm  bank-07.asm  bank-08.asm  bank-09.asm  bank-10.asm  bank-11.asm  bank-12.asm  bank-13.asm  bank-14.asm  bank-15.asm  fieldmap.txt  jsr_targets.txt  zp_xref.txt
rom/: rom
src/: apu.c  apu.h  apu.rs  audio.rs  bits.rs  engine.rs  env.rs  frame.rs  game.rs  game_memory.h  leaves.c  leaves.h  lib.rs  native.rs  nes.h  platform.h  ppu.c  ppu.h  ppu.rs  ram.h  regs.h  render.rs  rng.c  rng.h  routine_context.h  scripts.rs  state.rs
src/game/: farcall_bank_09_r7.c  farcall_bank_0C0D_seed.c  farcall_return_home.c  frame_counters.c  game_update.c  inc16_95.c  main_init.c  metasprite_build.c  ppu_commit_banks.c  ram_state_init.c  read_controllers.c  reset.c  rng_update.c  routine_0003.c  routine_0005.c  routine_0006.c  routine_0007.c  routine_0008.c  routine_0009.c  routine_0010.c  routine_0011.c  routine_0012.c  routine_0013.c  routine_0014.c  routine_0015.c  routine_0016.c  routine_0017.c  routine_0018.c  routine_0019.c  routine_0021.c  routine_0022.c  routine_0023.c  routine_0024.c  routine_0025.c  routine_0026.c  routine_0027.c  routine_0028.c  routine_0030.c  routine_0031.c  routine_0032.c  (+245 more)
src/music/: mod.rs  note.rs  songs.rs
src/native/: frame_runner.cc  frame_runner_c.h  frame_task.hpp  frame_wait_helpers.hpp  game_state.cc  game_state.hpp  lotw_scripts.cc  lotw_scripts.hpp  main_loop_dispatch.cc  queue_ppu_job_and_wait.cc  routine_0001.cc  routine_0002.cc  routine_0004.cc  routine_0020.cc  routine_0029.cc  routine_0033.cc  routine_0034.cc  routine_0039.cc  routine_0045.cc  routine_0049.cc  routine_0050.cc  (+57 more)
test/: apu_test.c  bulk_harness.c  host_harness.c  item_pickup_test.c  lockstep_port.c  native_coroutine_test.cc  play_sdl.c  play_sdl.cc  ppu_anim.c  ppu_game_driver.c  ppu_shim_test.c  replay_capture_port.c
tests/: actor_behaviors.rs  actor_movement.rs  actor_scheduler.rs  audio_dsl.rs  audio_helpers.rs  collision_helpers.rs  controller_input.rs  final_exit_helpers.rs  hud_meters.rs  inventory_menu.rs  inventory_state.rs  item_actions.rs  item_pickup.rs  item_stat_helpers.rs  menu_visual_helpers.rs  native_frame_task.rs  palette_helpers.rs  pickup_rewards.rs  port_contract.rs  projectile_slots.rs  render_helpers.rs  resource_counters.rs  room_flags.rs  room_flows.rs  scripted_player_helpers.rs  special_actor_flows.rs  temporary_room_sprites.rs
tools/: dis6502.py  fceux_capture.lua  fceux_coverage.lua  fceux_trace.lua  gen_reference.sh  oracle.py  oracle_fceux.lua
(+411 files in other folders)
