[package]
name = "lotw"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"

[dependencies]
sdl3 = { version = "0.18.4", optional = true }

[features]
default = []
sdl = ["dep:sdl3"]

[[bin]]
name = "play"
path = "src/bin/play.rs"
required-features = ["sdl"]

[[bin]]
name = "lockstep_port"
path = "src/bin/lockstep_port.rs"

[[bin]]
name = "replay_capture_port"
path = "src/bin/replay_capture_port.rs"

[[bin]]
name = "apu_test"
path = "src/bin/apu_test.rs"

[[bin]]
name = "ppu_shim_test"
path = "src/bin/ppu_shim_test.rs"

[[bin]]
name = "ppu_game_driver"
path = "src/bin/ppu_game_driver.rs"

[[bin]]
name = "ppu_anim"
path = "src/bin/ppu_anim.rs"

[profile.dev]
overflow-checks = false

[profile.test]
overflow-checks = false
