[package]
name = "lotw"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"

[dependencies]
corosensei = "0.3.4"
sdl3 = { version = "0.18.4", optional = true }
png = { version = "0.17", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

eframe = { version = "0.29", optional = true, default-features = false, features = ["glow", "default_fonts"] }

[features]
default = []
sdl = ["dep:sdl3"]
assets = ["dep:png", "dep:serde", "dep:serde_json"]
editor = ["assets", "dep:eframe"]

[[bin]]
name = "assettool"
path = "src/bin/assettool.rs"
required-features = ["assets"]

[[bin]]
name = "lotw-editor"
path = "src/bin/editor.rs"
required-features = ["editor"]

[[bin]]
name = "play"
path = "src/bin/play.rs"
required-features = ["sdl"]

[[bin]]
name = "lockstep_port"
path = "src/bin/lockstep_port.rs"

[[bin]]
name = "replay_capture_port"
path = "src/bin/replay_capture_port.rs"

[[bin]]
name = "apu_test"
path = "src/bin/apu_test.rs"

[[bin]]
name = "ppu_shim_test"
path = "src/bin/ppu_shim_test.rs"

[[bin]]
name = "ppu_game_driver"
path = "src/bin/ppu_game_driver.rs"

[[bin]]
name = "ppu_anim"
path = "src/bin/ppu_anim.rs"

[profile.dev]
overflow-checks = false

[profile.test]
overflow-checks = false

[[bin]]
name = "replay_oracle"
path = "src/bin/replay_oracle.rs"
