[project]
name = "lotw-agent"
version = "0.1.0"
description = "RL / search agent for Legacy of the Wizard over the deterministic Rust port env"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "gymnasium>=1.0",
    "lotw-env",            # the local PyO3 extension (built by maturin)
]

[dependency-groups]
dev = ["maturin>=1.0"]
# `uv sync --group train` for the PPO trainer. Torch is the CPU build here (runs
# headlessly / verifies the loop); on the AMD GPU run the trainer from the
# rocm/pytorch container instead — the code is device-agnostic (cuda if available).
train = ["torch", "opencv-python-headless"]

[tool.uv]
# This root is an application, not a distributable package — don't build it.
package = false

[tool.uv.sources]
lotw-env = { path = "lotw-env", editable = true }
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
