[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "lotw-env"
version = "0.1.0"
description = "Headless agent environment for Legacy of the Wizard (pixels + privileged state + deterministic replay checkpoints)"
requires-python = ">=3.9"
dependencies = ["numpy"]

[tool.maturin]
# The crate is a workspace member; the cdylib's lib.name (lotw_env) is the module.
manifest-path = "Cargo.toml"
